search movies adjustments
