# src/routes/proxy/searchMovie.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 import { requireEnvVar } from '../../middleware/validation';
 import {
+  getSearchedMovieCast,
   getSearchedMovieGenre,
   getSearchedMovieTitle,
 } from '../../controllers/TMDB_Proxy/searchMovie';
@@ -12,5 +13,7 @@ searchMovieRouter.use(requireEnvVar('TMDB_API_TOKEN'));
 searchMovieRouter.get('/movie/search', getSearchedMovieTitle);
 searchMovieRouter.get('/movie/search/title', getSearchedMovieTitle);
 searchMovieRouter.get('/movie/search/genre', getSearchedMovieGenre);
+searchMovieRouter.get('/movie/search/cast', getSearchedMovieCast);
 
 export { searchMovieRouter };
+
